[project]
name = "collaborative-ai-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "langchain>=1.3.10",
    "langchain-google-genai>=4.2.5",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.49.0",
]
